2011-12-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spwkspace/init.c: Test _Workspace_String_duplicate().

2011-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1589/build
	* sp01/Makefile.am, sp02/Makefile.am, sp03/Makefile.am,
	sp04/Makefile.am, sp05/Makefile.am, sp06/Makefile.am,
	sp07/Makefile.am, sp08/Makefile.am, sp09/Makefile.am,
	sp10/Makefile.am, sp11/Makefile.am, sp12/Makefile.am,
	sp13/Makefile.am, sp14/Makefile.am, sp15/Makefile.am,
	sp16/Makefile.am, sp17/Makefile.am, sp18/Makefile.am,
	sp19/Makefile.am, sp20/Makefile.am, sp2038/Makefile.am,
	sp21/Makefile.am, sp22/Makefile.am, sp23/Makefile.am,
	sp24/Makefile.am, sp25/Makefile.am, sp26/Makefile.am,
	sp27/Makefile.am, sp27a/Makefile.am, sp28/Makefile.am,
	sp29/Makefile.am, sp30/Makefile.am, sp31/Makefile.am,
	sp32/Makefile.am, sp33/Makefile.am, sp34/Makefile.am,
	sp35/Makefile.am, sp36/Makefile.am, sp37/Makefile.am,
	sp38/Makefile.am, sp39/Makefile.am, sp40/Makefile.am,
	sp41/Makefile.am, sp42/Makefile.am, sp43/Makefile.am,
	sp44/Makefile.am, sp45/Makefile.am, sp46/Makefile.am,
	sp47/Makefile.am, sp48/Makefile.am, sp49/Makefile.am,
	sp50/Makefile.am, sp51/Makefile.am, sp52/Makefile.am,
	sp53/Makefile.am, sp54/Makefile.am, sp55/Makefile.am,
	sp56/Makefile.am, sp57/Makefile.am, sp58/Makefile.am,
	sp59/Makefile.am, sp60/Makefile.am, sp62/Makefile.am,
	sp63/Makefile.am, sp64/Makefile.am, sp65/Makefile.am,
	sp66/Makefile.am, sp67/Makefile.am, sp68/Makefile.am,
	sp69/Makefile.am, sp70/Makefile.am, sp71/Makefile.am,
	sp72/Makefile.am, sp73/Makefile.am, sp74/Makefile.am,
	sp75/Makefile.am, sp76/Makefile.am, spassoc01/Makefile.am,
	spcbssched01/Makefile.am, spcbssched02/Makefile.am,
	spcbssched03/Makefile.am, spchain/Makefile.am,
	spclockget/Makefile.am, spcoverage/Makefile.am,
	spedfsched01/Makefile.am, spedfsched02/Makefile.am,
	spedfsched03/Makefile.am, sperror01/Makefile.am,
	sperror02/Makefile.am, sperror03/Makefile.am, spfatal01/Makefile.am,