@@ -1,3 +1,8 @@
+2011-12-13	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* sp31/task1.c: Make Do_nothing static.
+	* sprbtree01/init.c: Make test_compare_function, rb_assert static.
+
 2011-12-12	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* spwkspace/init.c: Test _Workspace_String_duplicate().
